# mahjong-cpp

./: CMakeLists.txt  README.md
data/config/: request_schema.json
src/emscripten/: CMakeLists.txt  main.cpp  test1.cpp
src/mahjong/: expectedvaluecalculator.cpp  expectedvaluecalculator.hpp  handseparator.cpp  json_parser.cpp  json_parser.hpp  syanten.cpp  syanten.hpp
